# mouse-aidata

./: .gitignore  README.md  cpp_simulator_adapter.py  function_library.py  game_worker.py  generate_sft_data.py  lightweight_simulator.py  reward_config.py
cpp_simulator/: CMakeLists.txt  pyproject.toml  setup.py
cpp_simulator/include/: constants.hpp  function_library.hpp  game_state.hpp  simulator.hpp
cpp_simulator/src/: bindings.cpp  simulator.cpp
